--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start:backend": "cd packages/backend && npm run start:dev",
     "start:frontend": "cd packages/frontend && npm run dev"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@nestjs/swagger": "^7.1.16"
+  },
   "devDependencies": {
     "lerna": "^8.0.0"
   }
