--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/js-cookie": "^3.0.6",
     "antd": "^5.12.2",
+    "axios": "^1.6.2",
+    "js-cookie": "^3.0.5",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.21.0",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.1"
