--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "@types/js-cookie": "^3.0.6",
     "antd": "^5.12.2",
     "axios": "^1.6.2",
