--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
     "@types/js-cookie": "^3.0.6",
+    "@types/react-infinite-scroll-component": "^5.0.0",
     "antd": "^5.12.2",
     "axios": "^1.6.2",
     "js-cookie": "^3.0.5",
@@ -19,6 +20,7 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.21.0",
     "sort-by": "^1.2.0",
