--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -23,6 +23,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.21.0",
+    "socket.io-client": "^4.7.2",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.1"
   },
